# cube_renderer

./: README.md
mips/: README.md  macros.asm  main.asm
x86/: CMakeLists.txt  README.md  main.c  render.asm
x86-32/: .gitignore  CMakeLists.txt  README.md
x86-32/cmake/: CMakeASM-NASMInformation.cmake
x86-32/include/: Cube.h
x86-32/src/: main.c  render.asm
x86-64/: CMakeLists.txt  README.md
x86-64/cmake/: CMakeASM-NASMInformation.cmake
x86-64/include/: Cube.h
x86-64/src/: main.c  render.asm
x86/include/: Cube.h
x86/src/: main.c  render.asm
